Fix copyright and social media footer spacing in tablet view

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,10 +49,12 @@
     --h1-font-size: calc(1rem * var(--base-scale) * var(--base-scale) * var(--base-scale));
 }
 
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--gray);
     margin: 0;
+    padding: 0;
     min-width: 100vw;
     max-width: 100vw;
     display:flex;
@@ -506,13 +508,9 @@ input:invalid, input:focus:invalid {
 
 footer {
     margin: 0 auto;
-}
-
-.bottom-nav { 
-    margin: 0 auto;
     width: 80%;
-
 }
+
 
 .bottom-nav > p { 
     padding: 0;
@@ -589,6 +587,11 @@ form .col-xs-12 {
 .copyright {
     margin-top: 20%;
 }
+
+.copyright  .row {
+    margin: 0 auto;
+    width: 80%;
+}
 .copyright > .container {
     padding: 0;
 }
@@ -613,14 +616,17 @@ ul.inline.social-media {
     flex-flow: row wrap;
     justify-content: space-around;
     padding: 0;
-    width: 100vw;
-    max-width: 100vw;
 }
-
-@media screen and (min-width: 576px) {
+/*footer for tablets*/ 
+@media screen and (min-width: 768px) {
     .company-details > .row {
         display: flex;
 
+    }
+    .copyright .row {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-around;
     }
 }
 
@@ -706,11 +712,11 @@ ul.inline.social-media {
     justify-content: space-evenly;
 }
 
-[class^="col-"] {
+/* [class^="col-"] {
     padding: 0 1rem;
     width: 100%;
     max-width: 100%;
-}
+} */
 
 .col-xs-1 {
     flex: 0 0 var(--col-1);
